# Bad-words-generation

./: main.py  pyproject.toml
