[tool.poetry]
name = "generate-text"
version = "0.1.0"
description = ""
authors = ["tanchaudc <tan.chau@deltacognition.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.29.1"
torch = "^2.0.1"
sentencepiece = "^0.1.99"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
